crates/strider-analyze/tests/snapshots/v3__x86__patterns__chained_xor_mask.snap
---
source: crates/strider-analyze/tests/v3_baseline.rs
assertion_line: 177
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "2" -> "1" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "3" -> "1" [color="#88cc88", label=EAX, fontcolor="#cccccc", fontsize=9];
  "4" -> "1" [color="#88cc88", label=EDX, fontcolor="#cccccc", fontsize=9];
  "5" -> "1" [color="#88cc88", label=ST0, fontcolor="#cccccc", fontsize=9];
  "6" -> "1" [color="#88cc88", label=XMM0, fontcolor="#cccccc", fontsize=9];
  "6" [label="init\nXMM0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "5" [label="init\nST0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "4" [label="init\nEDX", shape=Mdiamond, fillcolor="#1a3a5c"];
  "3" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "7" -> "3" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "8" -> "3" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "8" [label="const 0xca53ba51:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "7" [label="And:u32", shape=box, fillcolor="#2d2d2d"];
  "9" -> "7" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "9" [label="const 0xff00ff:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "10" -> "7" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "10" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "11" -> "10" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "12" -> "10" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "12" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "13" -> "12" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "13" [label="const 0x4:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "14" -> "12" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "14" [label="init\nESP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "11" [label="MemPartition[MemPartitionId(0)]", shape=trapezium, fillcolor="#3a1a4a"];
  "15" -> "11" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "15" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
  "2" [label="MemUnion", shape=trapezium, fillcolor="#3a1a4a"];
  "15" -> "2" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
}
