crates/strider-analyze/tests/snapshots/v3__x86__patterns__loop_with_invariant_load.snap
---
source: crates/strider/tests/v3_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v2" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v2" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v3" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v3" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "4" -> "1" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "5" [label="Region", shape=invhouse, fillcolor="#2a1a4a"];
  "v3" -> "5" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "v2" -> "5" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "6" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "5" -> "6" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "7" -> "6" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "8" -> "6" [color="#88cc88", label=EAX, fontcolor="#cccccc", fontsize=9];
  "9" -> "6" [color="#88cc88", label=EDX, fontcolor="#cccccc", fontsize=9];
  "10" -> "6" [color="#88cc88", label=ST0, fontcolor="#cccccc", fontsize=9];
  "11" -> "6" [color="#88cc88", label=XMM0, fontcolor="#cccccc", fontsize=9];
  "11" [label="init\nXMM0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "10" [label="init\nST0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "9" [label="φ EDX", shape=house, fillcolor="#163030"];
  "5" -> "9" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "12" -> "9" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "13" -> "9" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "13" [label="arg[1] ← ram[sp + 8]", shape=Mdiamond, fillcolor="#1a3a5c"];
  "12" [label="Or:u32", shape=box, fillcolor="#2d2d2d"];
  "14" -> "12" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "15" -> "12" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "15" [label="ShiftRight:u32", shape=box, fillcolor="#2d2d2d"];
  "16" -> "15" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "17" -> "15" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "17" [label="const 0x1:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "16" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "18" -> "16" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "18" [label="Mul:u64", shape=box, fillcolor="#2d2d2d"];
  "19" -> "18" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "20" -> "18" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "20" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "21" -> "20" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "21" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "13" -> "21" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "22" -> "21" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "22" [label="const 0xfffffffe:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "19" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "23" -> "19" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "23" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "13" -> "23" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "24" -> "23" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "24" [label="const 0xffffffff:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "14" [label="ShiftLeft:u32", shape=box, fillcolor="#2d2d2d"];
  "25" -> "14" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "26" -> "14" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "26" [label="const 0x1f:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "25" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "27" -> "25" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "27" [label="ShiftRight:u64", shape=box, fillcolor="#2d2d2d"];
  "18" -> "27" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "28" -> "27" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "28" [label="const 0x20:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "8" [label="φ ECX", shape=house, fillcolor="#163030"];
  "5" -> "8" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "29" -> "8" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "30" -> "8" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "30" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "29" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "31" -> "29" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "12" -> "29" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "31" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "32" -> "31" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "33" -> "31" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "33" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "7" -> "33" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "34" -> "33" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "34" [label="arg[0] ← ram[sp + 4]", shape=Mdiamond, fillcolor="#1a3a5c"];
  "7" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "35" -> "7" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v36" [label="init\nESP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v36" -> "7" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "37" -> "7" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "37" [label="init\nESI", shape=Mdiamond, fillcolor="#1a3a5c"];
  "35" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
  "32" [label="Mul:u32", shape=box, fillcolor="#2d2d2d"];
  "38" -> "32" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "23" -> "32" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "38" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "33" -> "38" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "39" -> "38" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "39" [label="const 0x1:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "4" [label="Or:bool", shape=box, fillcolor="#2d2d2d"];
  "40" -> "4" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "41" -> "4" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "41" [label="Sless\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "13" -> "41" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "42" -> "41" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "42" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "40" [label="Equal\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "13" -> "40" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "43" -> "40" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "43" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
}
