crates/strider-analyze/tests/snapshots/v3__x86__patterns__main.snap
---
source: crates/strider-analyze/tests/v3_baseline.rs
assertion_line: 177
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "2" -> "1" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "3" -> "1" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "3" [label="const 0x4010f0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "4" -> "1" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "4" [label="const 0x2:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "5" -> "1" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "5" [label="const 0x3:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "6" -> "1" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "6" [label="const 0x4:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "7" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "1" -> "7" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "8" -> "7" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "9" -> "7" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "9" [label="const 0x401100:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "10" -> "7" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "10" [label="const 0xdeadbeef:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "11" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "7" -> "11" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "12" -> "11" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "13" -> "11" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "13" [label="const 0x401110:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "14" -> "11" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "14" [label="const 0xffffffff:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "15" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "11" -> "15" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "16" -> "15" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "17" -> "15" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "17" [label="const 0x401130:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "18" -> "15" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "19" -> "15" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "19" [label="const 0x5:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "20" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "15" -> "20" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "21" -> "20" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "22" -> "20" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "22" [label="const 0x401160:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "23" -> "20" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "23" [label="const 0x5:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "24" -> "20" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "24" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "25" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "20" -> "25" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "26" -> "25" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "27" -> "25" [color="#88cc88", label=EAX, fontcolor="#cccccc", fontsize=9];
  "v28" [label="Post Call\nEDX", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "20" -> "v28" [color="#888888", style=dashed];
  "v28" -> "25" [color="#88cc88", label=EDX, fontcolor="#cccccc", fontsize=9];
  "v29" [label="Post Call\nST0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "20" -> "v29" [color="#888888", style=dashed];
  "v29" -> "25" [color="#88cc88", label=ST0, fontcolor="#cccccc", fontsize=9];
  "v30" [label="Post Call\nXMM0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "20" -> "v30" [color="#888888", style=dashed];
  "v30" -> "25" [color="#88cc88", label=XMM0, fontcolor="#cccccc", fontsize=9];
  "27" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "31" -> "27" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "v32" [label="Post Call\nEAX", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "20" -> "v32" [color="#888888", style=dashed];
  "v32" -> "27" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "31" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "33" -> "31" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "34" -> "31" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "34" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "35" -> "34" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "36" -> "34" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "36" [label="const 0xfffffff8:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "35" [label="init\nESP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "33" [label="MemPartition[MemPartitionId(5)]", shape=trapezium, fillcolor="#3a1a4a"];
  "20" -> "33" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "26" [label="MemUnion", shape=trapezium, fillcolor="#3a1a4a"];
  "37" -> "26" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "37" [label="StackStore u32\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "33" -> "37" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v38" [label="init\nESP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v38" -> "37" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "27" -> "37" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "21" [label="MemUnion", shape=trapezium, fillcolor="#3a1a4a"];
  "39" -> "21" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "39" [label="StackStore u32\n→ ram[sp - 32]", shape=box3d, fillcolor="#20182a"];
  "40" -> "39" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v41" [label="init\nESP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v41" -> "39" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "42" -> "39" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "42" [label="const 0x40120f:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "40" [label="StackStore u32\n→ ram[sp - 28]", shape=box3d, fillcolor="#20182a"];
  "43" -> "40" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v44" [label="init\nESP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v44" -> "40" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "45" -> "40" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "45" [label="const 0x5:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "43" [label="StackStore u32\n→ ram[sp - 24]", shape=box3d, fillcolor="#20182a"];
  "46" -> "43" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v47" [label="init\nESP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v47" -> "43" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "48" -> "43" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "48" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "46" [label="StackStore u32\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "49" -> "46" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v50" [label="init\nESP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v50" -> "46" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "51" -> "46" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "51" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "52" -> "51" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "v53" [label="Post Call\nEAX", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "15" -> "v53" [color="#888888", style=dashed];
  "v53" -> "51" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "52" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "49" -> "52" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "54" -> "52" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "54" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "35" -> "54" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "55" -> "54" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "55" [label="const 0xfffffff8:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "49" [label="MemPartition[MemPartitionId(4)]", shape=trapezium, fillcolor="#3a1a4a"];
  "15" -> "49" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "18" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "35" -> "18" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "56" -> "18" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "56" [label="const 0xfffffffc:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "16" [label="MemUnion", shape=trapezium, fillcolor="#3a1a4a"];
  "57" -> "16" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "57" [label="StackStore u32\n→ ram[sp - 32]", shape=box3d, fillcolor="#20182a"];
  "58" -> "57" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v59" [label="init\nESP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v59" -> "57" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "60" -> "57" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "60" [label="const 0x4011f7:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "58" [label="StackStore u32\n→ ram[sp - 24]", shape=box3d, fillcolor="#20182a"];
  "61" -> "58" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v62" [label="init\nESP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v62" -> "58" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "63" -> "58" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "63" [label="const 0x5:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "61" [label="StackStore u32\n→ ram[sp - 28]", shape=box3d, fillcolor="#20182a"];
  "64" -> "61" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v65" [label="init\nESP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v65" -> "61" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "18" -> "61" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "64" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "66" -> "64" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v67" [label="init\nESP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v67" -> "64" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "68" -> "64" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "68" [label="const 0x7:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "66" [label="StackStore u32\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "69" -> "66" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v70" [label="init\nESP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v70" -> "66" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "71" -> "66" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "71" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "72" -> "71" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "v73" [label="Post Call\nEAX", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "11" -> "v73" [color="#888888", style=dashed];
  "v73" -> "71" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "72" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "69" -> "72" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "54" -> "72" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "69" [label="MemPartition[MemPartitionId(3)]", shape=trapezium, fillcolor="#3a1a4a"];
  "11" -> "69" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "12" [label="MemUnion", shape=trapezium, fillcolor="#3a1a4a"];
  "74" -> "12" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "74" [label="StackStore u32\n→ ram[sp - 32]", shape=box3d, fillcolor="#20182a"];
  "75" -> "74" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v76" [label="init\nESP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v76" -> "74" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "77" -> "74" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "77" [label="const 0x4011d7:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "75" [label="StackStore u32\n→ ram[sp - 28]", shape=box3d, fillcolor="#20182a"];
  "78" -> "75" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v79" [label="init\nESP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v79" -> "75" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "80" -> "75" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "80" [label="const 0xffffffff:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "78" [label="StackStore u32\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "81" -> "78" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v82" [label="init\nESP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v82" -> "78" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "83" -> "78" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "83" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "84" -> "83" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "v85" [label="Post Call\nEAX", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "7" -> "v85" [color="#888888", style=dashed];
  "v85" -> "83" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "84" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "81" -> "84" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "54" -> "84" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "81" [label="MemPartition[MemPartitionId(2)]", shape=trapezium, fillcolor="#3a1a4a"];
  "7" -> "81" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "8" [label="MemUnion", shape=trapezium, fillcolor="#3a1a4a"];
  "86" -> "8" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "86" [label="StackStore u32\n→ ram[sp - 32]", shape=box3d, fillcolor="#20182a"];
  "87" -> "86" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v88" [label="init\nESP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v88" -> "86" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "89" -> "86" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "89" [label="const 0x4011c7:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "87" [label="StackStore u32\n→ ram[sp - 28]", shape=box3d, fillcolor="#20182a"];
  "90" -> "87" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v91" [label="init\nESP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v91" -> "87" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "92" -> "87" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "92" [label="const 0xdeadbeef:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "90" [label="StackStore u32\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "93" -> "90" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v94" [label="init\nESP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v94" -> "90" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "95" -> "90" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "95" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "96" -> "95" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "v97" [label="Post Call\nEAX", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v97" [color="#888888", style=dashed];
  "v97" -> "95" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "96" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "93" -> "96" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "54" -> "96" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "93" [label="MemPartition[MemPartitionId(1)]", shape=trapezium, fillcolor="#3a1a4a"];
  "1" -> "93" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "2" [label="MemUnion", shape=trapezium, fillcolor="#3a1a4a"];
  "98" -> "2" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "98" [label="StackStore u32\n→ ram[sp - 32]", shape=box3d, fillcolor="#20182a"];
  "99" -> "98" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v100" [label="init\nESP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v100" -> "98" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "101" -> "98" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "101" [label="const 0x4011b7:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "99" [label="StackStore u32\n→ ram[sp - 28]", shape=box3d, fillcolor="#20182a"];
  "102" -> "99" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v103" [label="init\nESP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v103" -> "99" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "104" -> "99" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "104" [label="const 0x2:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "102" [label="StackStore u32\n→ ram[sp - 24]", shape=box3d, fillcolor="#20182a"];
  "105" -> "102" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v106" [label="init\nESP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v106" -> "102" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "107" -> "102" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "107" [label="const 0x3:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "105" [label="StackStore u32\n→ ram[sp - 20]", shape=box3d, fillcolor="#20182a"];
  "108" -> "105" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v109" [label="init\nESP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v109" -> "105" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "110" -> "105" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "110" [label="const 0x4:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "108" [label="StackStore u32\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "111" -> "108" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v112" [label="init\nESP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v112" -> "108" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "113" -> "108" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "113" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "111" [label="MemPartition[MemPartitionId(0)]", shape=trapezium, fillcolor="#3a1a4a"];
  "114" -> "111" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "114" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
}
